--- a/src/pages/Explore/Explore.css
+++ b/src/pages/Explore/Explore.css
@@ -1,4 +1,11 @@
-
+.explore-container {
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    height: calc(100vh - 5rem);
+    background-color: #2c2c2c;
+    box-sizing: border-box;
+}
 .left-column{
     flex: 0.7;
     border: 1px solid #ccc;
